--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
         android:theme="@style/Theme.TabLayoutProto">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:exported="false"
             android:theme="@style/Theme.TabLayoutProto.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
